--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Control LMA</string>
+
+    <string name="login_email">Correo electronico</string>
+    <string name="login_pass">Contraseña</string>
+    <string name="login_btn_login">Ingresar</string>
+    <string name="login_login_error">Error en la Contraseña</string>
 </resources>
