--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="login_pass">Contraseña</string>
     <string name="login_btn_login">Ingresar</string>
     <string name="login_login_error">Error en la Contraseña</string>
+    <string name="login_without_info_user">Al parecer tu informacion de empleado esta incompleta</string>
 </resources>
