--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="login_btn_login">Ingresar</string>
     <string name="login_login_error">Error en la Contraseña</string>
     <string name="login_without_info_user">Al parecer tu informacion de empleado esta incompleta</string>
+
+
+    <string name="home_new_title">Titulo</string>
+    <string name="home_new_description">Descripción</string>
+    <string name="home_new_btn_send">Publicar</string>
 </resources>
