--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="home_new_title">Titulo</string>
     <string name="home_new_description">Descripción</string>
     <string name="home_new_btn_send">Publicar</string>
+
+    <string name="profile_pass_description">Ingresa la contraseña de tu cuenta</string>
+    <string name="profile_pass_btn_send">Confirmar</string>
+    <string name="profile_pass_put_pass_hint">Contraseña</string>
+    <string name="profile_finger_title">Registra tu asistencia</string>
+    <string name="profile_finger_description">Coloca tu huella para registrar tu asistencia</string>
 </resources>
